added 2 hmtl file and a READ>md file.

--- a/js tutorials/addNumbers.html
+++ b/js tutorials/addNumbers.html
@@ -7,10 +7,7 @@
   </head>
   <body>
     <script>
-      const pi = 3.14; //this will not work you cannot re-asign const variables
-      pi = 10;
-
-      console.log(pi);
+      console.log(23 + 97);
     </script>
   </body>
 </html>
