fix: change html files names to proper names and add embed.html

--- a/js tutorials/addNumbers.html
+++ b/js tutorials/addNumbers.html
@@ -7,7 +7,14 @@
   </head>
   <body>
     <script>
-      console.log(23 + 97);
+      const myInt = 5;
+      const myFloat = 6.667;
+
+      typeof myInt;
+      myFloat;
+
+      console.log(myInt);
+      console.log(myFloat);
     </script>
   </body>
 </html>
