--- a/js tutorials/const.html
+++ b/js tutorials/const.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <script>
-      const pi = 3.14; //this will not work you cannot re-asign const variables
-      pi = 10;
+      const pi = 3.14;
+      pi = 10; //this will not work you cannot re-asign const variables
 
       console.log(pi);
     </script>
