added numberVsString.html and quotes.html

--- a/js tutorials/quotes.html
+++ b/js tutorials/quotes.html
@@ -9,9 +9,13 @@
     <script>
       const goodQuotes1 = "She said 'I think so!'";
       const goodQuotes2 = `She said "I'm not going in there!"`;
-
+      //ways to include quotes, use other character to declare strings
       console.log(goodQuotes1);
       console.log(goodQuotes2);
+
+      const bigmouth = "I've got no right to take my place…";
+      //another way to escape characters add "\" before the charater.
+      console.log(bigmouth);
     </script>
   </body>
 </html>
