--- a/dataTypeAndCondiotnals.js/parametersArgumets.html
+++ b/dataTypeAndCondiotnals.js/parametersArgumets.html
@@ -16,6 +16,13 @@ arguments are true value*/
       /*when passing function 
 to another function call
 the function passed as a argument*/
+
+      const myText = "I am a string";
+      const newString = myText.replace("string", "sausage");
+      console.log(newString);
+      // the replace() string function takes a source string,
+      // and a target string and replaces the source string,
+      // with the target string, and returns the newly formed string
     </script>
   </body>
 </html>
