--- a/dataTypeAndCondiotnals.js/parametersArgumets.html
+++ b/dataTypeAndCondiotnals.js/parametersArgumets.html
@@ -11,11 +11,11 @@
         return animal + " is my favorite animal!";
       }
       /* parameters are placeholders for actual value
-arguments are true value*/
+        arguments are true value*/
       console.log(favoriteAnimal("Goat"));
       /*when passing function 
-to another function call
-the function passed as a argument*/
+        to another function call
+        the function passed as a argument*/
 
       const myText = "I am a string";
       const newString = myText.replace("string", "sausage");
@@ -23,6 +23,17 @@ the function passed as a argument*/
       // the replace() string function takes a source string,
       // and a target string and replaces the source string,
       // with the target string, and returns the newly formed string
+
+      const myArray = ["I", "love", "chocolate", "frogs"];
+      const madeAString = myArray.join(" ");
+      console.log(madeAString);
+      // the join() function takes an array, joins
+      // all the array items together into a single
+      // string, and returns this new string
+
+      const myNumber = Math.random();
+      // the random() function generates a random number between
+      // 0 and up to but not including 1, and returns that number
     </script>
   </body>
 </html>
