file name changed from "parametersArguments.html" to "functions.html"

--- a/dataTypeAndCondiotnals.js/functions.html
+++ b/dataTypeAndCondiotnals.js/functions.html
@@ -34,6 +34,13 @@
       const myNumber = Math.random();
       // the random() function generates a random number between
       // 0 and up to but not including 1, and returns that number
+
+      function myFunction() {
+        alert("hello");
+      }
+
+      myFunction();
+      // calls the function once
     </script>
   </body>
 </html>
