add anonymous function in a form of comment.

--- a/dataTypeAndCondiotnals.js/functions.html
+++ b/dataTypeAndCondiotnals.js/functions.html
@@ -13,7 +13,7 @@
       /* parameters are placeholders for actual value
         arguments are true value*/
       console.log(favoriteAnimal("Goat"));
-      /*when passing function 
+      /*when passing function
         to another function call
         the function passed as a argument*/
 
@@ -52,6 +52,18 @@
 
       greet("Rhex"); // Hello, Rhex
       greet(); // Hello, World!
+
+      /*
+      
+      function (){
+        alert("this is a anonymous function")
+      }
+        
+      This is called an anonymous function,
+      because it has no name. You'll often see
+      anonymous functions when a function
+      expects to receive another function as a
+      parameter.*/
     </script>
   </body>
 </html>
