--- a/dataTypeAndCondiotnals.js/functions.html
+++ b/dataTypeAndCondiotnals.js/functions.html
@@ -43,7 +43,7 @@
       // calls the function once
 
       let name = prompt("what is your name?");
-      alert(`hello, ${name}`);
+      alert(`hello, World ${name}`);
 
       function greet(name = "World!") {
         //function with defualt parameter
@@ -53,17 +53,52 @@
       greet("Rhex"); // Hello, Rhex
       greet(); // Hello, World!
 
-      /*
-      
-      function (){
-        alert("this is a anonymous function")
+      function logKey(event) {
+        console.log(`You pressed "${event.key}".`);
       }
-        
-      This is called an anonymous function,
-      because it has no name. You'll often see
-      anonymous functions when a function
-      expects to receive another function as a
-      parameter.*/
+
+      textBox.addEventListener("keydown", logKey);
+
+      /* addEventListener() function of the text box. 
+      This function expects you to pass it (at least) 
+      two parameters:
+      the name of the event to listen for, 
+      which in this case is keydown
+      a function to run when the event happens.*/
+
+      textBox.addEventListener("keydown", (event) => {
+        console.log(`You pressed "${event.key}".`);
+      });
+
+      /*Arrow functions
+      If you pass an anonymous function like this, 
+      there's an alternative form you can use, 
+      called an arrow function. Instead of 
+      function(event), you write (event) =>:*/
+
+      textBox.addEventListener("keydown", (event) => {
+        console.log(`You pressed "${event.key}".`);
+      });
+
+      /*If the function only takes one parameter, 
+      you can omit the parentheses around the parameter*/
+
+      const originals = [1, 2, 3];
+
+      const doubled = originals.map((item) => item * 2);
+
+      console.log(doubled); // [2, 4, 6]
+
+      /*The map() method takes each item in the array in turn, 
+      passing it into the given function. It then takes the value 
+      returned by that function and adds it to a new array.*/
+
+      const myText2 = "The weather is cold";
+      const newString2 = myText2.replace("cold", "warm");
+      console.log(newString2); // Should print "The weather is warm"
+      // the replace() string function takes a string,
+      // replaces one substring with another, and returns
+      // a new string with the replacement made
     </script>
   </body>
 </html>
