--- a/functions/functionsExpressions.html
+++ b/functions/functionsExpressions.html
@@ -6,6 +6,16 @@
     <title>Document</title>
   </head>
   <body>
-    <script></script>
+    <script>
+      function sayHi() {
+        // (1) create
+        alert("Hello");
+      }
+
+      let func = sayHi; // (2) copy, functions are values
+
+      func(); // Hello     // (3) run the copy (it works)!
+      sayHi(); // Hello
+    </script>
   </body>
 </html>
