--- a/guess.html
+++ b/guess.html
@@ -44,11 +44,11 @@
     </div>
 
     <script>
-      let randomNumber = Math.floor(Math.random()) + 1;
+      let randomNumber = Math.floor(Math.random() * 100) + 1;
 
       const guesses = document.querySelector(".guesses");
       const lastResult = document.querySelector(".lastResult");
-      const lowOrHi = document.querySelector("lowOrHi");
+      const lowOrHi = document.querySelector(".lowOrHi");
       const guessSubmit = document.querySelector(".guessSubmit");
       const guessField = document.querySelector(".guessField");
 
@@ -111,7 +111,7 @@
 
         lastResult.style.backgroundColor = "white";
 
-        randomNumber = Math.floor(Math.random()) + 1;
+        randomNumber = Math.floor(Math.random() * 100) + 1;
       }
     </script>
   </body>
